add maven-compiler-plugin to pom.xml